# flying-unicorn

./: .gitignore  README.MD
1.local/: run.py
2.venv/: requirements.txt
3.pip/: const.py  requirements.txt
4.poetry/: pyproject.toml
5.twine/: pyproject.toml
6.docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
6.docker/flying_unicorns/: powers.py
