[tool.poetry]
name = "unicorns and python"
version = "0.1.0"
description = ""
authors = ["Tariku T. <tt@unimail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.6"
rich = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
